sol file added/repo reorg

--- a/presale/index.html
+++ b/presale/index.html
@@ -4,6 +4,10 @@
 <head>
 
   <meta charset="UTF-8">
+
+<link rel="apple-touch-icon" type="image/png" href="img/Chadlogo.png" />
+<meta name="apple-mobile-web-app-title" content="MyDawgy">
+
   <title>MyDawgy Presale</title>
 
   <link rel="stylesheet" href="index.css">
@@ -24,19 +28,23 @@
 <h1><img src="dawgy.jpg" width=5% height=5% /> MyDawgy </h1>
 <h2>The coolest dawgy in town</h2>
 <br>
-
-<br>Pending BNB :
-<br><div class="message-box-content" id="field-claim"></div>
+<br>one TRILLION token/BNB (0.2 - 5BNB/transaction)
 <br>
-<button id="btn-claim">
+<br>Presale will start at 7pm UTC.
+<br>Don't be late!
+<br>
+<!-- <div class="message-box-content" contenteditable="true" placeholder="" id="field-nb"></div> -->
+<br>
+<button id="btn-buy">
   <div id="prepare">
   <span class="text">Connect</span>
   </div>
   <div id="connected">
-  <span class="text">Claim</span>
+  <span class="text">Buy</span>
   </div>
 </button>
 <br>
+<br><div id="token-left"></div>
 <br>
 <br>
 <br>
